# claude-switcher

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows-exe.yml
src/claude_switcher/: __init__.py  __main__.py  app.py  app.tcss  core.py  i18n.py  modals.py  warming.py
